--- a/jobs/traefik.nomad.j2
+++ b/jobs/traefik.nomad.j2
@@ -19,10 +19,10 @@ job "traefik" {
       }
       #port "metrics" { }
     }
-    ephemeral_disk {
-      migrate   = true
-      size      = 300
-      sticky    = true
+    volume "traefik" {
+      type      = "host"
+      source    = "traefik"
+      read_only = false
     }
     service {
       name  = "{{ nomad_lb_service }}"
@@ -75,7 +75,7 @@ job "traefik" {
           "--entrypoints.websecure.http.tls.domains[0].sans=*.{{ base_domain }}",
           # TLS Certs
           "--certificatesresolvers.porkbunresolver.acme.email={{ acme_email }}",
-          "--certificatesresolvers.porkbunresolver.acme.storage=/tls/acme.json",
+          "--certificatesresolvers.porkbunresolver.acme.storage=/store/acme.json",
           "--certificatesresolvers.porkbunresolver.acme.dnschallenge=true",
           "--certificatesresolvers.porkbunresolver.acme.dnschallenge.provider=porkbun",
           # Ping
@@ -107,12 +107,16 @@ job "traefik" {
           "--accesslog=false",
         ]
         volumes = [
-          "alloc/data/tls:/tls",
           "local/ca.pem:/etc/traefik/ssl/ca.pem",
           "local/cert.pem:/etc/traefik/ssl/cert.pem",
           "local/key.pem:/etc/traefik/ssl/key.pem",
           "local/provider.toml:/etc/traefik/files/provider.toml"
         ]
+      }
+      volume_mount {
+        volume      = "traefik"
+        destination = "/store"
+        read_only   = false
       }
       env {
         TZ                      = "{{ ntp_timezone }}"
