Give more time for heimdall to init

--- a/jobs/heimdall.nomad.j2
+++ b/jobs/heimdall.nomad.j2
@@ -2,6 +2,10 @@ job "heimdall" {
   region      = "{{ nomad_region }}"
   datacenters = ["{{ nomad_datacenter }}"]
   type        = "service"
+  update {
+    healthy_deadline = "15m" # Heimdall takes some time to initialize
+    progress_deadline = "20m"
+  }
   group "heimdall" {
     count = 1
     network {
@@ -45,7 +49,7 @@ job "heimdall" {
         TZ = "{{ ntp_timezone }}"
       }
       resources {
-        cpu    = 500
+        cpu    = 200
         memory = 256
       }
     }
